WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231852
REGRESSION (
r270850
): Reference clip path clips in the wrong place when inside non-visible overflow
https://bugs.webkit.org/show_bug.cgi?id=231852
Summary
REGRESSION (r270850): Reference clip path clips in the wrong place when insid...
Simon Fraser (smfr)
Reported
2021-10-15 19:39:06 PDT
Created
attachment 441469
[details]
Test case Attached testcase shows a bug with clip-path clipping.
Attachments
Test case
(1.09 KB, text/html)
2021-10-15 19:39 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(7.12 KB, patch)
2021-10-15 21:20 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Patch
(20.09 KB, patch)
2021-10-16 12:28 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-10-15 19:39:18 PDT
<
rdar://83186229
>
Simon Fraser (smfr)
Comment 2
2021-10-15 21:20:14 PDT
Created
attachment 441471
[details]
Patch
Simon Fraser (smfr)
Comment 3
2021-10-16 12:28:46 PDT
Created
attachment 441500
[details]
Patch
EWS
Comment 4
2021-10-17 09:54:32 PDT
Committed
r284336
(
243131@main
): <
https://commits.webkit.org/243131@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441500
[details]
.
Simon Fraser (smfr)
Comment 5
2021-10-21 15:30:45 PDT
***
Bug 231849
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6
2021-11-28 17:42:36 PST
***
Bug 233469
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug