REGRESSION (r270850): Reference clip path clips in the wrong place when inside non-visible overflow https://bugs.webkit.org/show_bug.cgi?id=231852 <rdar://83186229>

Reviewed by Tim Horton.
Source/WebCore:

When clipping CSS boxes with reference clip paths we need to give RenderSVGResourceClipper two
different rectangles; the objectBoundingBox that is used to compute clip path geometry,
and the bounds of the clipped content, so that the buffer-based clipping code path
can create an ImageBuffer of the appropriate size.

Previously, we confounded these two rectangles, resulting in various bugs.

Tests: css3/masking/reference-clip-path-bounds.html
       css3/masking/reference-clip-path-objectBoundingBox-buffer-clip.html
       css3/masking/reference-clip-path-objectBoundingBox-path-clip.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::setupClipPath):
* rendering/svg/RenderSVGResourceClipper.cpp:
(WebCore::RenderSVGResourceClipper::applyResource):
(WebCore::RenderSVGResourceClipper::applyClippingToContext):
* rendering/svg/RenderSVGResourceClipper.h:

LayoutTests:

Tests for reference clip-path with box-shadows and enclosing oveflow:hidden.

* css3/masking/reference-clip-path-bounds-expected.html: Added.
* css3/masking/reference-clip-path-bounds.html: Added.
* css3/masking/reference-clip-path-objectBoundingBox-buffer-clip-expected.html: Added.
* css3/masking/reference-clip-path-objectBoundingBox-buffer-clip.html: Added.
* css3/masking/reference-clip-path-objectBoundingBox-path-clip-expected.html: Added.
* css3/masking/reference-clip-path-objectBoundingBox-path-clip.html: Added.


Canonical link: https://commits.webkit.org/243131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284336 268f45cc-cd09-0410-ab3c-d52691b4dbfc